[package]
name = "nydus"
version = "0.1.0"
authors = ["Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"]

[dependencies]
nanomsg = "0.6.2"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
log = "0.3"

[dev-dependencies]
tempdir = "0.3"
lazy_static = "1.0"